<resources>
    <string name="app_name">Fais-moi un dessin</string>
    <string name="title_home">Profil</string>
    <string name="title_lobby">Jouer</string>
    <string name="title_chat">Clavarder</string>
    <string name="title_tutorial">Tutoriel</string>
    <string name="username_input_hint">Pseudonyme</string>
    <string name="password_input_hint">Mot de passe</string>
    <string name="login_button_text">S\'identifier / S\'enregistrer</string>
    <string name="enter_channel_button_text">Entrer</string>
    <string name="mode_classique">Mode Classique</string>
    <string name="mode_sprint_solo">Mode Sprint Solo</string>
    <string name="mode_sprint_cooperatif">Mode Sprint Coopératif</string>
    <string name="mode_defi">Mode Tournoi</string>
    <string name="groupe_info">Groupe Info</string>
    <string name="logout">Se Déconnecter</string>
    <string name="creer_canal">Créer canal</string>
    <string name="creer_groupe">Créer groupe</string>
    <string name="annuler">Annuler</string>

    <string name="circle">
    M527.023,71.8233 C780.213,71.8233,985.464,277.075,985.464,530.265
    C985.464,783.455,780.213,988.707,527.023,988.707
    C273.832,988.707,68.5809,783.455,68.5809,530.265
    C68.5809,277.075,273.832,71.8233,527.023,71.8233 Z
    </string>

    <integer name="circle_original_width">1062</integer>
    <integer name="circle_original_height">1062</integer>
</resources>
