<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_lobby"
        android:icon="@drawable/ic_lobby_black_24dp"
        android:title="@string/title_lobby" />

    <item
        android:id="@+id/navigation_game_mode"
        android:icon="@drawable/ic_lobby_black_24dp"
        android:title="Jouer" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_tutorial"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/title_tutorial" />
</menu>
