<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:targetApi="lollipop"

    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"

    android:weightSum="1">

    <TextView
        android:id="@+id/text_lobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="Sélectionner un mode de jeu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="25sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mode_classique_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/mode_classique"
        android:textColor="#fff"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="68dp"
        android:layout_weight="0.3"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mode_sprint_solo_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/mode_sprint_solo"
        android:textColor="#fff"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="446dp"
        android:layout_weight="0.2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mode_sprint_cooperatif_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/mode_sprint_cooperatif"
        android:textColor="#fff"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="162dp"
        android:layout_weight="0.2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mode_tournament_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/mode_defi"
        android:textColor="#fff"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="162dp"
        android:layout_weight="0.2"/>
</androidx.appcompat.widget.LinearLayoutCompat>
