<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#F2F2F2">

    <com.github.glomadrian.grav.GravView
        android:id="@+id/grav"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
        app:array_colors="@array/blue_purple"
        app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
        app:regular_cell_size="150"
        app:regular_variance="100"
        app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
        app:ball_size_from_size="3dp"
        app:ball_size_to_size="6dp"
        app:animationGenerators="@array/path"
        app:path_variance_from="-10dp"
        app:path_variance_to="12dp"
        app:path="@string/circle"
        app:path_original_width="@integer/circle_original_width"
        app:path_original_height="@integer/circle_original_height"
        app:path_min_duration="5000"
        app:path_max_duration="6000"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/application_logo_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="136dp"
                android:layout_height="108dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/application_logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="132dp"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/auth_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/username_input_hint"
                android:nextFocusForward="@+id/auth_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user_32dp_blue"
                    android:drawablePadding="20dp"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/auth_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/password_input_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auth_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_32dp_blue"
                    android:drawablePadding="20dp"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                app:layout_constraintTop_toBottomOf="@+id/auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/login_button_text"
                    android:textColor="#fff"
                    tools:ignore="RtlHardcoded,UnusedAttribute" />

            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_warning_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/materialcolorpicker__red"
            android:text="Le mot de passe doit avoir au minimum 4 caractères \net contenir au moins 1 lettre majuscule, 1 lettre minuscule et 1 chiffre."
            android:visibility="gone">
        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>